added doctrine to project

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,4 @@ MYSQL_DATABASE=clicklogic_test_task
 MYSQL_ROOT_PASSWORD=password
 MYSQL_PASSWORD=password
 MYSQL_USER=root
+COMPOSER_AUTH='{"github-oauth":{"github.com":"<personal access token>"}}'
