--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
         environment:
             XDEBUG_CONFIG: "remote_host=192.168.229.0/28 remote_enable=1"
             PHP_IDE_CONFIG: "serverName=ClickLogiq"
+            COMPOSER_AUTH: ${COMPOSER_AUTH}
     mysql:
         image: mysql:5.7
         environment:
