--- a/app/.env.dist
+++ b/app/.env.dist
@@ -31,3 +31,7 @@ MYSQL_USER=${MYSQL_USER}
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@mysql:3306/${MYSQL_DATABASE}
 ###< doctrine/doctrine-bundle ###
+
+###> NASA API
+NASA_API_KEY=api_key
+###< NASA API
