--- a/app/composer.json
+++ b/app/composer.json
@@ -10,11 +10,14 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "friendsofsymfony/rest-bundle": "^3.0",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/property-access": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
