added babdev/pagerfanta-bundle package

--- a/app/composer.json
+++ b/app/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "babdev/pagerfanta-bundle": "^2.5",
         "composer/package-versions-deprecated": "^1.10",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
