--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -22,6 +22,7 @@ server {
         fastcgi_param PHP_VALUE "error_log=/var/log/nginx/app_php_errors.log";
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
+        fastcgi_read_timeout 1000;
         include fastcgi_params;
     }
 }
