--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -14,10 +14,10 @@ max_execution_time = 1000
 max_input_time = 1000
 
 xdebug.remote_enable=1
-xdebug.remote_port=9005
+xdebug.remote_port=9007
 xdebug.remote_autostart=1
-xdebug.remote_connect_back=0
-xdebug.idekey=DockerSF5T
+xdebug.remote_connect_back=1
+xdebug.idekey=ClickLogiq
 
 #added
 xdebug.remote_host=localhost
