--- a/app/config/packages/framework.yaml
+++ b/app/config/packages/framework.yaml
@@ -17,3 +17,4 @@ framework:
         log: true
     serializer:
         name_converter: 'serializer.name_converter.camel_case_to_snake_case'
+        enabled: true
