--- a/app/composer.json
+++ b/app/composer.json
@@ -12,11 +12,13 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "guzzlehttp/guzzle": "^7.0",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
