--- a/app/composer.json
+++ b/app/composer.json
@@ -17,6 +17,7 @@
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/serializer": "5.1.*",
