added git and zip extension to Dockerfile for php-fpm

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -7,6 +7,15 @@ RUN apt-get update \
     && docker-php-ext-install mysqli pdo pdo_mysql \
     && docker-php-ext-enable pdo_mysql
 
+#-e: It is used to exit immediately if a command exits with a non-zero status.
+#-u: It is used to treat unset variables as an error when substituting.
+#-x: It is used to print commands and their arguments in a sequential way (as they are executed).
+RUN set -eux; apt-get update; apt-get install -y libzip-dev zlib1g-dev; docker-php-ext-install zip
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y git
+
 RUN pecl install xdebug-2.8.1 \
     && docker-php-ext-enable xdebug
 
