updated PHP version in docker; added validation for each NearEarthObject DTO

--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -7,7 +7,6 @@ log_errors = On
 html_errors = Off
 
 error_log = /var/log/error.log
-#extension=amqp.so
 
 #timeout for investigating xdebug output
 max_execution_time = 1000
@@ -19,8 +18,9 @@ xdebug.remote_autostart=1
 xdebug.remote_connect_back=1
 xdebug.idekey=ClickLogiq
 
-#added
 xdebug.remote_host=localhost
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
-#xdebug.remote_log="/var/log/xdebug.log"
+;xdebug.remote_log="/var/log/xdebug.log"
+
+date.timezone=Europe/Kiev
