--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             XDEBUG_CONFIG: "remote_host=192.168.229.0/28 remote_enable=1"
             PHP_IDE_CONFIG: "serverName=ClickLogiq"
             COMPOSER_AUTH: ${COMPOSER_AUTH}
+            COMPOSER_MEMORY_LIMIT: ${COMPOSER_MEMORY_LIMIT}
     mysql:
         image: mysql:5.7
         environment:
