--- a/app/composer.json
+++ b/app/composer.json
@@ -20,6 +20,7 @@
         "symfony/monolog-bundle": "^3.5",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
+        "symfony/proxy-manager-bridge": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
