added fake name parameter to composer.json

--- a/app/composer.json
+++ b/app/composer.json
@@ -74,5 +74,7 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
-    }
+    },
+    "name": "test",
+    "description": ""
 }
