--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -8,19 +8,20 @@ html_errors = Off
 
 error_log = /var/log/error.log
 
-#timeout for investigating xdebug output
-max_execution_time = 1000
-max_input_time = 1000
+;timeout for investigating xdebug output
+max_execution_time = 10000
+max_input_time = 10000
 
 xdebug.remote_enable=1
 xdebug.remote_port=9007
 xdebug.remote_autostart=1
-xdebug.remote_connect_back=1
+;https://stackoverflow.com/a/41483004/5371978
+xdebug.remote_connect_back=0
 xdebug.idekey=ClickLogiq
 
-xdebug.remote_host=localhost
+xdebug.remote_host=192.168.229.5
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
-;xdebug.remote_log="/var/log/xdebug.log"
+xdebug.remote_log="/var/log/xdebug.log"
 
 date.timezone=Europe/Kiev
