fixed xdebug settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
         networks:
             - internal
         environment:
-            XDEBUG_CONFIG: "remote_host=192.168.229.0/28 remote_enable=1"
-            PHP_IDE_CONFIG: "serverName=ClickLogiq"
+            XDEBUG_CONFIG: "remote_enable=1"
+            PHP_IDE_CONFIG: "serverName=DockerSF5T"
             COMPOSER_AUTH: ${COMPOSER_AUTH}
             COMPOSER_MEMORY_LIMIT: ${COMPOSER_MEMORY_LIMIT}
     mysql:
@@ -62,4 +62,4 @@ networks:
         ipam:
             driver: default
             config:
-                -   subnet: 192.168.229.0/28
+                -   subnet: 192.168.229.3/28
