--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -9,18 +9,18 @@ html_errors = Off
 error_log = /var/log/error.log
 
 #timeout for investigating xdebug output
+#timeout for investigating xdebug output
 max_execution_time = 1000
 max_input_time = 1000
-
 xdebug.remote_enable=1
-xdebug.remote_port=9007
+xdebug.remote_port=9005
 xdebug.remote_autostart=1
-xdebug.remote_connect_back=1
-xdebug.idekey=ClickLogiq
-
-xdebug.remote_host=localhost
+xdebug.remote_connect_back=0
+xdebug.idekey=DockerSF5T
+#added
+xdebug.remote_host=172.17.0.1
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
-;xdebug.remote_log="/var/log/xdebug.log"
+xdebug.remote_log="/var/log/xdebug.log"
 
 date.timezone=Europe/Kiev
