--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -9,15 +9,15 @@ html_errors = Off
 error_log = /var/log/error.log
 
 #timeout for investigating xdebug output
-#timeout for investigating xdebug output
 max_execution_time = 1000
 max_input_time = 1000
 xdebug.remote_enable=1
 xdebug.remote_port=9005
 xdebug.remote_autostart=1
-xdebug.remote_connect_back=0
+xdebug.remote_connect_back=1
+;xdebug.remote_connect_back=0 - for CLI
 xdebug.idekey=DockerSF5T
-#added
+;added
 xdebug.remote_host=172.17.0.1
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
