--- a/app/composer.json
+++ b/app/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "babdev/pagerfanta-bundle": "^2.5",
+        "beberlei/doctrineextensions": "^1.3",
         "composer/package-versions-deprecated": "^1.10",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
