--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -10,6 +10,10 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        #https://stackoverflow.com/a/38997144/5371978 - enabling beberlei/doctrineextensions functions
+        dql:
+            datetime_functions:
+                DAY: DoctrineExtensions\Query\Mysql\Day
         mappings:
             App:
                 is_bundle: false
