added strict types to controller

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -35,3 +35,7 @@ DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@mysql:3306/${MYSQL_DATABASE}
 ###> NASA API
 NASA_API_KEY=api_key
 ###< NASA API
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
