--- a/app/composer.json
+++ b/app/composer.json
@@ -27,6 +27,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.4",
         "symfony/maker-bundle": "^1.20",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
@@ -79,6 +80,6 @@
             "require": "5.1.*"
         }
     },
-    "name": "test",
+    "name": "glaphire/clicklogiq-test-task",
     "description": ""
 }
