--- a/app/composer.json
+++ b/app/composer.json
@@ -27,7 +27,9 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.4",
+        "phpstan/phpstan-doctrine": "^1.2",
         "symfony/maker-bundle": "^1.20",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
