fixed phpstan errors lvl 6

--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -6,3 +6,5 @@ parameters:
 		- src
 	doctrine:
 		objectManagerLoader: tests/object-manager.php
+	checkMissingIterableValueType: false
+	checkGenericClassInNonGenericObjectType: false
