--- a/app/composer.json
+++ b/app/composer.json
@@ -31,6 +31,7 @@
         "phpstan/phpstan": "^1.4",
         "phpstan/phpstan-doctrine": "^1.2",
         "symfony/maker-bundle": "^1.20",
+        "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
